objects/zkusps__QueuedShipment__c.object
<CustomObject>
    <fields>
        <fullName>zkusps__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>USPS Queued Shipments</relationshipLabel>
        <relationshipName>USPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__BulkShipment__c</fullName>
        <label>Bulk Shipment</label>
        <referenceTo>zkusps__BulkShipment__c</referenceTo>
        <relationshipLabel>USPS Queued Shipments</relationshipLabel>
        <relationshipName>USPS_Queued_Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkusps__BypassAddressValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__CertificateNumber__c</fullName>
        <label>Certificate Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>USPS Queued Shipments</relationshipLabel>
        <relationshipName>USPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__ContentsExplanation__c</fullName>
        <label>Contents Explanation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ContentsType__c</fullName>
        <label>Contents Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CustomAddressSourceRecordId__c</fullName>
        <label>Custom Address Source Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CustomAddressSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Address Source</label>
        <referenceTo>zkusps__CustomAddressSource__c</referenceTo>
        <relationshipLabel>USPS Queued Shipments</relationshipLabel>
        <relationshipName>USPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__EELPFC__c</fullName>
        <label>EEL/PFC</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__EntryNumber__c</fullName>
        <label>Entry Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__ImportersCustomsReference__c</fullName>
        <label>Importer&apos;s Customs Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__LabelImageSize__c</fullName>
        <label>Label Image Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__LabelImageType__c</fullName>
        <label>Label Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EPL2</fullName>
                </value>
                <value>
                    <fullName>GIF</fullName>
                </value>
                <value>
                    <fullName>JPEG</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>PNG</fullName>
                </value>
                <value>
                    <fullName>ZPLII</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkusps__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>USPS Queued Shipments</relationshipLabel>
        <relationshipName>USPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__LicenseNumber__c</fullName>
        <label>License Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__NonDeliveryInstructions__c</fullName>
        <label>Non-Delivery Instructions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>USPS Queued Shipments</relationshipLabel>
        <relationshipName>USPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__PackagingType__c</fullName>
        <description>correlates to &quot;USPS Mail Piece&quot; field &quot;Shape&quot;</description>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USPS Flat Rate Envelope</fullName>
                </value>
                <value>
                    <fullName>USPS Small Flat Rate Box</fullName>
                </value>
                <value>
                    <fullName>USPS Medium Flat Rate Box</fullName>
                </value>
                <value>
                    <fullName>USPS Large Flat Rate Box</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Parcel</fullName>
                </value>
                <value>
                    <fullName>Large Parcel - any dimension over 12 inches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkusps__QueuedShipmentSpecialServices__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Queued Shipment Special Services</label>
        <referenceTo>zkusps__QueuedShipmentSpecialServices__c</referenceTo>
        <relationshipLabel>USPS Queued Shipments</relationshipLabel>
        <relationshipName>USPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__RecipientCity__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;To City&quot;</description>
        <label>Recipient City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RecipientCompany__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;To Company&quot;</description>
        <label>Recipient Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RecipientCountry__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;To Country&quot;</description>
        <label>Recipient Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RecipientEmail__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;To Email&quot;</description>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkusps__RecipientName__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;To Name&quot;</description>
        <label>Recipient Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RecipientPhone__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;To Phone&quot;</description>
        <label>Recipient Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RecipientPostalCode__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;To Postal Code&quot;</description>
        <label>Recipient Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RecipientState__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;To State&quot;</description>
        <label>Recipient State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RecipientStreet__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;To Street&quot;</description>
        <label>Recipient Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkusps__ReplyPayOnUsePostage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay On Use Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__RestrictionComments__c</fullName>
        <label>Restriction Comments</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RestrictionType__c</fullName>
        <label>Restriction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ReturnShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;Reply Postage&quot;</description>
        <label>Return Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderCity__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;From City&quot;</description>
        <label>Sender City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderCompany__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;From Company&quot;</description>
        <label>Sender Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderEmail__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;From Email&quot;</description>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderName__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;From Name&quot;</description>
        <label>Sender Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderPhone__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;From Phone&quot;</description>
        <label>Sender Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderPostalCode__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;From Postal Code&quot;</description>
        <label>Sender Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderState__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;From State&quot;</description>
        <label>Sender State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderStreet__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;From Street&quot;</description>
        <label>Sender Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkusps__SendersCustomsReference__c</fullName>
        <label>Sender&apos;s Customs Reference</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ServiceType__c</fullName>
        <description>correlates to &quot;USPS Shipment&quot; field &quot;Mail Class&quot;</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic: Express</fullName>
                </value>
                <value>
                    <fullName>Domestic: Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkusps__ShipDate__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkusps__YourReference1__c</fullName>
        <label>Your Reference 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__YourReference2__c</fullName>
        <label>Your Reference 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__YourReference3__c</fullName>
        <label>Your Reference 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>USPS Queued Shipment</label>
    <nameField>
        <displayFormat>Queued-Shipment-{00000000}</displayFormat>
        <label>Queued Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Queued Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>